@@ -249,7 +249,8 @@
                 src="@ContentDeliveryNetwork.Google.JQueryUrl"
                 asp-subresource-integrity-src="~/js/jquery.js"></script>
         <script crossorigin="anonymous"
-                src="@ContentDeliveryNetwork.Microsoft.JQueryValidateUrl"></script>
+                src="@ContentDeliveryNetwork.Microsoft.JQueryValidateUrl"
+                asp-subresource-integrity-src="~/js/jquery-validate.js"></script>
         <script crossorigin="anonymous"
                 src="@ContentDeliveryNetwork.Microsoft.JQueryValidateUnobtrusiveUrl"></script>
         <script crossorigin="anonymous"
