@@ -8,7 +8,7 @@
     "bootstrap-sass": "3.3.7",
     "font-awesome": "4.7.0",
     "jquery": "3.1.1",
-    "jquery-validation": "1.15.1",
+    "jquery-validation": "1.16.0",
     "jquery-validation-unobtrusive": "3.2.6"
   },
   "devDependencies": {
